# geometry_calculator

./: .flake8  .gitignore  .pre-commit-config.yaml  exceptions.py  mypy.ini  pyproject.toml
.github/workflows/: publish.yml
examples/: advanced_usage.py  basic_usage.py
geometry_calculator/: shapes.py
