[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-calculator"
version = "0.1.0"
authors = [
    {name="Your Name", email="your.email@example.com"},
]
description = "A library for calculating areas of geometric shapes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/geometry-calculator"
"Bug Tracker" = "https://github.com/yourusername/geometry-calculator/issues"